--- a/cadastro.html
+++ b/cadastro.html
@@ -31,8 +31,17 @@
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
 
+                    <div class="input-container">
+                        <input name="telefone" id="telefone" class="input" type="text" placeholder="Telefone" data-tipo="telefone" required>
+                        <label class="input-label" for="telefone">Telefone</label>
+                        <span class="input-mensagem-erro">Este campo não está válido</span>
+                    </div>
 
-
+                    <div class="input-container">
+                        <input name="instagram" id="instagram" class="input" type="text" placeholder="Instagram" data-tipo="instagram" required>
+                        <label class="input-label" for="instagram">Instagram</label>
+                        <span class="input-mensagem-erro">Este campo não está válido</span>
+                    </div>
 
                     <div class="input-container">
                         <input name="email" id="email" class="input" type="email" placeholder="Email" data-tipo="email" required>
