--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
     <link rel="stylesheet" href="./assets/css/cadastro_produto.css">
+    <script src="./js/simple-mask-money.js"></script>
+    <script src="./js/app.js" type="module"></script>
 </head>
 <body>
     <header class="cabecalho container">
@@ -31,12 +33,12 @@
             <h1 class="cartao__titulo">Cadastrar um produto</h1>
             <form action="./cadastro_produto_concluido.html" class="flex flex--coluna">
                 <div class="input-container">
-                    <input name="nome" id="nome" class="input" type="text" placeholder="Nome">
+                    <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
                     <label class="input-label" for="nome">Nome</label>
                     <span class="input-mensagem-erro">Este campo não está válido</span>
                 </div>
                 <div class="input-container cadastro__preco-container">
-                    <input name="preco" id="preco" class="input" type="text" placeholder="Preço">
+                    <input name="preco" id="preco" class="input" type="text" placeholder="Preço" required>
                     <label class="input-label" for="preco">Preço</label>
                     <span class="input-mensagem-erro">Este campo não está válido</span>
                 </div>
@@ -45,9 +47,25 @@
                     <label class="input-label" for="descricao">Descrição</label>
                     <span class="input-mensagem-erro">Este campo não está válido</span>
                 </div>
+                <div class="input-container">
+                    <input name="quantidade" id="quantidade" class="input" type="number" placeholder="Quantidade em estoque" required>
+                    <label class="input-label" for="quantidade">Quantidade em estoque</label>
+                    <span class="input-mensagem-erro">Este campo não está válido</span>
+                </div>
                 <button class="botao">Cadastrar produto</button>
             </form>
         </section>
     </main>
+    <script>
+        SimpleMaskMoney.setMask('#preco', {
+            prefix: 'R$ ',
+            fixed: true,
+            fractionDigits: 2,
+            decimalSeparator: ',',
+            thousandsSeparator: '.',
+            cursor: 'end'
+        });
+    </script>
+    <script src="./js/app.js" type="module"></script>
 </body>
 </html>
